6-anthos-install/acm-repos/root-config-repo/namespaces/boa/allow-istio-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-allow
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: boa
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          networking/namespace: istio-system
          app: istiod
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          networking/namespace: istio-system
          app: istiod
