6-anthos-install/acm-repos/root-config-repo/namespaces/boa/deny-all-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  #name: default-allow
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - {}
